Name:                incremental-parser
Version:             0.4
Cabal-Version:       >= 1.10
Build-Type:          Simple
Synopsis:            Generic parser library capable of providing partial results from partial input.
Category:            Parsing
Tested-With:         GHC
Description:

  This package defines yet another parser combinator library. This one is implemented using the concept of Brzozowski
  derivatives, tweaked and optimized to work with any monoidal input type. Lists, ByteString, and Text are supported out
  of the box, as well as any other data type for which the monoid-subclasses package defines instances. If the parser
  result is also a monoid, its chunks can be extracted incrementally, before the complete input is parsed.
  
License:             GPL-3
License-file:        LICENSE.txt
Copyright:           (c) 2011-2018 Mario Blazevic
Author:              Mario Blazevic
Maintainer:          blamario@yahoo.com
Homepage:            https://github.com/blamario/incremental-parser
Extra-Source-Files:  Benchmarks/airports.dat, README.md

Source-repository head
  type:              git
  location:          https://github.com/blamario/incremental-parser

Library
  hs-source-dirs:    src
  Exposed-Modules:   Text.ParserCombinators.Incremental,
                     Text.ParserCombinators.Incremental.LeftBiasedLocal, Text.ParserCombinators.Incremental.Symmetric,
                     Control.Applicative.Monoid
  Build-Depends:     base >= 4.9 && < 5, transformers >= 0.5 && < 0.6, parsers < 0.13,
                     monoid-subclasses < 1.1, rank2classes >= 1.0 && < 1.4
  ghc-options:       -Wall
  if impl(ghc >= 7.0.0)
     default-language: Haskell2010

test-suite Main
  Type:              exitcode-stdio-1.0
  x-uses-tf:         true
  Default-Language:  Haskell2010
  Build-Depends:     base < 5, incremental-parser, monoid-subclasses < 1.1,
                     QuickCheck >= 2 && < 3, checkers >= 0.3.2 && < 0.6,
                     tasty >= 0.7 && < 1.3, tasty-quickcheck >= 0.7 && < 1.0
  Main-is:           Test/TestIncrementalParser.hs

benchmark CSV
  type: exitcode-stdio-1.0
  Default-Language:  Haskell2010
  hs-source-dirs:    Benchmarks
  ghc-options:       -O2 -Wall -rtsopts
  main-is:           CSV.hs
  Build-Depends:     base < 5, monoid-subclasses < 1.1, incremental-parser,
                     bytestring >= 0.10.4.0, criterion >= 1.0, deepseq >= 1.1, text >= 1.1.1.0
