Name:                incremental-parser
Version:             0.2.3.4
Cabal-Version:       >= 1.10
Build-Type:          Simple
Synopsis:            Generic parser library capable of providing partial results from partial input.
Category:            Parsing
Tested-with:         GHC
Description:
  This package defines yet another parser library. This one is implemented using the concept of Brzozowski derivatives,
  tweaked and optimized to work with any monoidal input type. Lists, ByteString, and Text are supported out of the box,
  as well as any other data type for which the monoid-subclasses package defines instances.
  If the parser result is also a monoid, the parser can provide it incrementally, before the complete input is parsed.
  
License:             GPL
License-file:        LICENSE.txt
Copyright:           (c) 2011-2015 Mario Blazevic
Author:              Mario Blazevic
Maintainer:          blamario@yahoo.com
Homepage:            http://patch-tag.com/r/blamario/incremental-parser/wiki/
Source-repository head
  type:              darcs
  location:          http://code.haskell.org/SCC/

Library
  Exposed-Modules:   Text.ParserCombinators.Incremental,
                     Text.ParserCombinators.Incremental.LeftBiasedLocal, Text.ParserCombinators.Incremental.Symmetric,
                     Control.Applicative.Monoid
  Build-Depends:     base < 5, monoid-subclasses < 0.5
  GHC-prof-options:  -auto-all
  if impl(ghc >= 7.0.0)
     default-language: Haskell2010

test-suite Main
  Type:            exitcode-stdio-1.0
  x-uses-tf:       true
  Build-Depends:     base < 5, monoid-subclasses < 0.5,
                     QuickCheck >= 2 && < 3, checkers >= 0.3.2 && < 0.5,
                     tasty >= 0.7, tasty-quickcheck >= 0.7
  Main-is:           Test/TestIncrementalParser.hs
  Other-Modules:     Text.ParserCombinators.Incremental,
                     Text.ParserCombinators.Incremental.LeftBiasedLocal, Text.ParserCombinators.Incremental.Symmetric,
                     Control.Applicative.Monoid
  default-language:  Haskell2010
